fix: syntax overflow

--- a/webapp/app/globals.css
+++ b/webapp/app/globals.css
@@ -93,6 +93,18 @@
   }
 }
 
+html {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+body {
+  max-width: 100vw;
+  max-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 /* SCROLLBAR STYLES */
 
 /* total width */
